Java WEB Tutorials

--- a/Week 2/WebApplication1/web/WEB-INF/web.xml
+++ b/Week 2/WebApplication1/web/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	 version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <servlet-mapping>
+        <servlet-name>ControllerServlet</servlet-name>
+        <url-pattern>*.abc</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -13,8 +13,15 @@
         <servlet-name>sim</servlet-name>
         <servlet-class>com.dummy.jsp.SimpleServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControllerServlet</servlet-name>
+        <servlet-class>com.dummy.jsp.ControllerServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>sim</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
+    <error-page>
+        <location>/errorpage.jsp</location>
+    </error-page>
 </web-app>
