--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Week 2/build/
 /Week 2/WebApplication1/nbproject/private/
 /Week 2/WebApplication1/build/
+/Week 2/dummyProject/nbproject/private/
+/Week 2/dummyProject/build/
