Add Adress Complete

--- a/Week 2/dummyProject/web/WEB-INF/web.xml
+++ b/Week 2/dummyProject/web/WEB-INF/web.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-
+    <error-page>  
+       <exception-type>java.lang.Exception</exception-type>  
+       <location>/error.jsp</location>  
+    </error-page>  
+    <filter>
+	<filter-name>SessionFilter</filter-name>
+	<filter-class>
+		com.dummy.servletFilter.SessionFilter
+	</filter-class>
+	<init-param>
+		<param-name>avoid-urls</param-name>
+		<param-value>register.jsp,error.jsp,index,register</param-value>
+	</init-param>
+    </filter>
+    <filter-mapping>
+            <filter-name>SessionFilter</filter-name>
+            <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <session-config>
         <session-timeout>
             30
