--- a/Week 2/dummyProject/web/WEB-INF/web.xml
+++ b/Week 2/dummyProject/web/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <listener>
+          <listener-class>com.dummy.servlets.FetchDataListener</listener-class>
+    </listener>
     <error-page>  
        <exception-type>java.lang.Exception</exception-type>  
        <location>/error.jsp</location>  
