Spring Java Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@
 /Week 2/dummyProject/nbproject/private/
 /Week 2/dummyProject/build/
 /Week 2/dummyProject/dist/
+/Week 3/SpringSample/nbproject/private/
+/Week 3/SpringSample/build/
+/Week 3/SampleMavenProject/target/
+/Week 3/SpringSample/dist/
+/Week 3/SpringSample_1/nbproject/private/
+/Week 3/SpringSampleBackup/nbproject/private/
+/Week 3/SpringSampleXML/nbproject/private/
+/Week 3/SpringSampleXML/build/
+/Week 3/SpringSampleXMLAnno/nbproject/private/
+/Week 3/SpringSampleXMLAnno/build/
+/Week 3/SpringSampleXMLAnno/dist/
+/Week 3/SpringSampleJava/nbproject/private/
