Spring Java Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Week 3/SpringSampleXMLAnno/build/
 /Week 3/SpringSampleXMLAnno/dist/
 /Week 3/SpringSampleJava/nbproject/private/
+/Week 3/SpringSampleJava/build/
