--- a/Week 3/SpringSampleJava/nbproject/project.properties
+++ b/Week 3/SpringSampleJava/nbproject/project.properties
@@ -28,126 +28,20 @@ dist.jar=${dist.dir}/SpringSampleJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-logging-1.2.jar=../../../Downloads/commons-logging-1.2/commons-logging-1.2.jar
-file.reference.spring-aop-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-aop-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-aop-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-aop-3.2.3.RELEASE-sources.jar
-file.reference.spring-aop-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-aop-3.2.3.RELEASE.jar
-file.reference.spring-aspects-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-aspects-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-aspects-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-aspects-3.2.3.RELEASE-sources.jar
-file.reference.spring-aspects-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-aspects-3.2.3.RELEASE.jar
-file.reference.spring-beans-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-beans-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-beans-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-beans-3.2.3.RELEASE-sources.jar
-file.reference.spring-beans-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-beans-3.2.3.RELEASE.jar
-file.reference.spring-build-src-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-build-src-3.2.3.RELEASE.jar
-file.reference.spring-context-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-context-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-context-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-context-3.2.3.RELEASE-sources.jar
-file.reference.spring-context-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-context-3.2.3.RELEASE.jar
-file.reference.spring-context-support-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-context-support-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-context-support-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-context-support-3.2.3.RELEASE-sources.jar
-file.reference.spring-context-support-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-context-support-3.2.3.RELEASE.jar
-file.reference.spring-core-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-core-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-core-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-core-3.2.3.RELEASE-sources.jar
-file.reference.spring-core-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-core-3.2.3.RELEASE.jar
-file.reference.spring-expression-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-expression-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-expression-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-expression-3.2.3.RELEASE-sources.jar
-file.reference.spring-expression-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-expression-3.2.3.RELEASE.jar
-file.reference.spring-instrument-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-instrument-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-instrument-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-instrument-3.2.3.RELEASE-sources.jar
-file.reference.spring-instrument-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-instrument-3.2.3.RELEASE.jar
-file.reference.spring-instrument-tomcat-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-instrument-tomcat-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-instrument-tomcat-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-instrument-tomcat-3.2.3.RELEASE-sources.jar
-file.reference.spring-instrument-tomcat-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-instrument-tomcat-3.2.3.RELEASE.jar
-file.reference.spring-jdbc-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-jdbc-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-jdbc-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-jdbc-3.2.3.RELEASE-sources.jar
-file.reference.spring-jdbc-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-jdbc-3.2.3.RELEASE.jar
-file.reference.spring-jms-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-jms-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-jms-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-jms-3.2.3.RELEASE-sources.jar
-file.reference.spring-jms-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-jms-3.2.3.RELEASE.jar
-file.reference.spring-orm-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-orm-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-orm-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-orm-3.2.3.RELEASE-sources.jar
-file.reference.spring-orm-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-orm-3.2.3.RELEASE.jar
-file.reference.spring-oxm-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-oxm-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-oxm-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-oxm-3.2.3.RELEASE-sources.jar
-file.reference.spring-oxm-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-oxm-3.2.3.RELEASE.jar
-file.reference.spring-struts-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-struts-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-struts-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-struts-3.2.3.RELEASE-sources.jar
-file.reference.spring-struts-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-struts-3.2.3.RELEASE.jar
-file.reference.spring-test-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-test-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-test-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-test-3.2.3.RELEASE-sources.jar
-file.reference.spring-test-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-test-3.2.3.RELEASE.jar
-file.reference.spring-tx-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-tx-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-tx-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-tx-3.2.3.RELEASE-sources.jar
-file.reference.spring-tx-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-tx-3.2.3.RELEASE.jar
-file.reference.spring-web-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-web-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-web-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-web-3.2.3.RELEASE-sources.jar
-file.reference.spring-web-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-web-3.2.3.RELEASE.jar
-file.reference.spring-webmvc-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-webmvc-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-webmvc-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-webmvc-3.2.3.RELEASE-sources.jar
-file.reference.spring-webmvc-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-webmvc-3.2.3.RELEASE.jar
-file.reference.spring-webmvc-portlet-3.2.3.RELEASE-javadoc.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-webmvc-portlet-3.2.3.RELEASE-javadoc.jar
-file.reference.spring-webmvc-portlet-3.2.3.RELEASE-sources.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-webmvc-portlet-3.2.3.RELEASE-sources.jar
-file.reference.spring-webmvc-portlet-3.2.3.RELEASE.jar=../../../Downloads/spring-framework-3.2.3.RELEASE/libs/spring-webmvc-portlet-3.2.3.RELEASE.jar
+file.reference.spring-aop-4.3.1.RELEASE.jar=/home/anshul/.m2/repository/org/springframework/spring-aop/4.3.1.RELEASE/spring-aop-4.3.1.RELEASE.jar
+file.reference.spring-beans-4.3.1.RELEASE.jar=/home/anshul/.m2/repository/org/springframework/spring-beans/4.3.1.RELEASE/spring-beans-4.3.1.RELEASE.jar
+file.reference.spring-context-4.3.1.RELEASE.jar=/home/anshul/.m2/repository/org/springframework/spring-context/4.3.1.RELEASE/spring-context-4.3.1.RELEASE.jar
+file.reference.spring-core-4.3.1.RELEASE.jar=/home/anshul/.m2/repository/org/springframework/spring-core/4.3.1.RELEASE/spring-core-4.3.1.RELEASE.jar
+file.reference.spring-expression-4.3.1.RELEASE.jar=/home/anshul/.m2/repository/org/springframework/spring-expression/4.3.1.RELEASE/spring-expression-4.3.1.RELEASE.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.spring-aop-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-aop-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-aop-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-aspects-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-aspects-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-aspects-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-beans-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-beans-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-beans-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-build-src-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-context-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-context-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-context-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-context-support-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-context-support-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-context-support-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-core-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-core-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-core-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-expression-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-expression-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-expression-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-instrument-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-instrument-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-instrument-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-instrument-tomcat-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-instrument-tomcat-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-instrument-tomcat-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-jdbc-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-jdbc-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-jdbc-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-jms-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-jms-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-jms-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-orm-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-orm-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-orm-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-oxm-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-oxm-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-oxm-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-struts-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-struts-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-struts-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-test-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-test-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-test-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-tx-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-tx-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-tx-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-web-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-web-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-web-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-webmvc-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-webmvc-3.2.3.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-portlet-3.2.3.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-webmvc-portlet-3.2.3.RELEASE-sources.jar}:\
-    ${file.reference.spring-webmvc-portlet-3.2.3.RELEASE.jar}:\
-    ${file.reference.commons-logging-1.2.jar}
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.spring-aop-4.3.1.RELEASE.jar}:\
+    ${file.reference.spring-beans-4.3.1.RELEASE.jar}:\
+    ${file.reference.spring-context-4.3.1.RELEASE.jar}:\
+    ${file.reference.spring-core-4.3.1.RELEASE.jar}:\
+    ${file.reference.spring-expression-4.3.1.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
