Spring WEB MVC Example

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /Week 3/SpringSampleXMLAnno/dist/
 /Week 3/SpringSampleJava/nbproject/private/
 /Week 3/SpringSampleJava/build/
+/Week 3/mavenproject1/FitnessTracker/target/
