--- a/Week 3/mavenproject1/FitnessTracker/src/main/webapp/WEB-INF/web.xml
+++ b/Week 3/mavenproject1/FitnessTracker/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,8 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         version="2.5" 
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+         http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 <servlet>
 <servlet-name>fitTrackerServlet</servlet-name>
 <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -10,6 +14,10 @@
 <servlet-mapping>
 <servlet-name>fitTrackerServlet</servlet-name>
 <url-pattern>*.html</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+<servlet-name>fitTrackerServlet</servlet-name>
+<url-pattern>/pdfs/**</url-pattern>
 </servlet-mapping>
 <display-name>Archetype Created Web Application</display-name>
 </web-app>
