--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Week 3/SpringSampleJava/nbproject/private/
 /Week 3/SpringSampleJava/build/
 /Week 3/mavenproject1/FitnessTracker/target/
+/Week 3/SpringJDBC/target/
