--- a/Week 3/SpringJDBC/src/main/webapp/WEB-INF/web.xml
+++ b/Week 3/SpringJDBC/src/main/webapp/WEB-INF/web.xml
@@ -4,25 +4,21 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
          http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 <servlet>
-<servlet-name>fitTrackerServlet</servlet-name>
+<servlet-name>springJDBC</servlet-name>
 <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+<init-param>
+<param-name>contextConfigLocation</param-name>
+<param-value>/WEB-INF/config/servlet-config.xml</param-value>
+</init-param>
 </servlet>
 <servlet-mapping>
-<servlet-name>fitTrackerServlet</servlet-name>
-<url-pattern>*.html</url-pattern>
+<servlet-name>springJDBC</servlet-name>
+<url-pattern>/</url-pattern>
 </servlet-mapping>
 <servlet-mapping>
-<servlet-name>fitTrackerServlet</servlet-name>
+<servlet-name>springJDBC</servlet-name>
 <url-pattern>/pdfs/**</url-pattern>
 </servlet-mapping>
-<filter>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-</filter>
- 
-<filter-mapping>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <url-pattern>/*</url-pattern>
-</filter-mapping>
+
 <display-name>Archetype Created Web Application</display-name>
 </web-app>
