Spring Project Configuration FIles

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Week 3/SpringSampleJava/build/
 /Week 3/mavenproject1/FitnessTracker/target/
 /Week 3/SpringJDBC/target/
+/MusicLibraryApp/target/
