--- a/MusicLibraryApp/pom.xml
+++ b/MusicLibraryApp/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>cglib-nodep</artifactId>
             <version>3.2.4</version>
         </dependency>
+        
+        <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.34</version>
+        </dependency>
 
         
         <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
