Search fetaure added, Playlist integration

--- a/MusicLibraryApp/pom.xml
+++ b/MusicLibraryApp/pom.xml
@@ -147,6 +147,14 @@
             <version>2.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
